--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run copyDir && parcel index.html",
-    "build": "npm run copyDir && parcel build index.html --public-url https://doter1995.github.io/earthquakes/",
-    "copyDir": "cp -r ./public ./dist",
+    "build": " npm run copyDir && parcel build index.html --public-url https://doter1995.github.io/earthquakes/",
+    "deleteDir": "rm -rf ./dist",
+    "copyDir": "mkdir -p ./dist && cp -rf ./public ./dist/",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [
