--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3": "^5.9.2",
     "d3-array": "^2.0.3",
     "d3-dsv": "^1.1.1",
+    "stats.js": "^0.17.0",
     "three": "^0.104.0",
     "topojson": "^3.0.2"
   }
